--- a/css/klachtml.css
+++ b/css/klachtml.css
@@ -37,6 +37,6 @@
   color: #c0c1c1;
   padding: 0.375rem;
   border: 0.0625rem solid #1968a4;
-  font-size: 1.25rem;
+  font-size: 16px;
   align-items: center;
 }
